feat: Add chart annotation and GitHub Artifacts integration
- Move chart cleanup to finally block (fixes storage accumulation)
- Add generate_annotated_chart method with pattern markers
- Add _plot_candles and _plot_volume helper methods
- Parse vision result as JSON for pattern info
- Always generate annotated charts for review
- Upload annotated charts to GitHub Artifacts (7-day retention)
- Include GitHub Actions URL in notifications

--- a/.github/workflows/stock-monitor.yml
+++ b/.github/workflows/stock-monitor.yml
@@ -29,7 +29,17 @@ jobs:
           NTFY_TOPIC: ${{ secrets.NTFY_TOPIC }}
           MODEL_VISION: glm-4-plus
           MODEL_LOGIC: glm-4-plus
+          GITHUB_ACTIONS_URL: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
         run: python monitor.py
+
+      - name: Upload annotated charts
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: stock-charts-${{ github.run_number }}
+          path: "*_annotated.png"
+          retention-days: 7
+          if-no-files-found: ignore
 
       - name: Upload log (on failure)
         if: failure()
